examples/test/testpolicy6928.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6928
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key49: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value42
          key48: value4
          key13: value18
      podSelector:
        matchLabels:
          key9: value20
